# ChangeLog for gnome-base/gdm
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.372 2013/05/20 11:52:21 eva Exp $

*gdm-3.6.2-r1 (20 May 2013)

  20 May 2013; Gilles Dartiguelongue <eva@gentoo.org> +gdm-3.6.2-r1.ebuild:
  Backport consolekit path fix, bug #461866.

  05 May 2013; Justin Lecher <jlec@gentoo.org> gdm-3.6.2.ebuild,
  gdm-3.8.0.ebuild:
  Fix obsolete macros to work with automake-1.13, #468608

*gdm-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org>
  +files/gdm-3.7.3.1-disable-accessibility.patch,
  +files/gdm-3.7.90-fix-daemonize-regression.patch, +gdm-3.8.0.ebuild:
  Version bump for Gnome 3.8

  14 Mar 2013; Alexandre Rostovtsev <tetromino@gentoo.org> gdm-3.6.2.ebuild:
  Remove unnecessary dependency on consolekit[pam] and pam[consolekit], thanks
  to Samuli Suominen (bug #461688)

  07 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml:
  Remove unused or redundant USE flag description.

  07 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gdm-2.32.0-automagic-libxklavier-support.patch, -files/3.4.1/gdm,
  -files/gdm-2.32.0-custom-session.patch, -files/3.4.1/gdm.service,
  -files/gdm-2.32.0-fix-daemonize-regression.patch, -files/3.4.1/gdm-autologin,
  -files/gdm-2.32.0-selinux-remove-attr.patch, -gdm-2.32.1-r1.ebuild,
  -files/gdm-3.2.1.1-disable-accessibility.patch, -files/3.4.1/gdm-fingerprint,
  -files/gdm-3.2.1.1-pam-fix-1.patch, -files/gdm-3.2.1.1-pam-fix-2.patch,
  -gdm-3.4.1-r3.ebuild, -files/gdm-3.4.1-dconf-0.13.patch,
  -files/3.4.1/gdm-password, -files/gdm-3.4.1-plymouth.patch,
  -files/3.4.1/gdm-smartcard, -files/gdm-3.4.1-save-root-window.patch,
  -files/3.4.1/gdm-welcome:
  Clean up old revisions.

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gdm-3.6.2.ebuild:
  Add ~arm, wrt bug #449220

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gdm-3.6.2.ebuild:
  Add ~sparc, wrt bug #449220
