@@ -32,18 +32,20 @@ DIST gdm-2.20.11.tar.bz2 4013059 SHA256 2e21c9a44941cd0033aaa6b381b563488bbdd0ad
 DIST gdm-2.20.9-gentoo-files-r1.tar.bz2 3494 SHA256 666c0bf1ba28ccc257bf1235b5286e1eb9e15230c0036413ab428e09c54238f9 SHA512 aaf0f4bfdb13f6dc81dbfe93b144343b6a8146698450fce9753396c92bef2c4e699f3f5c2ff9b88736432d2fcb861ab8dc423148109cb9194983e0c07baa8aa5 WHIRLPOOL 698cd66740872260a106f8174a51a44a45817112d696b2741fd537a10362308ffa8917df31190fe042c46b7ea76e2f8d1147f5c15e39cfb33f1f2f7e951ffb78
 DIST gdm-3.6.2.tar.xz 1627356 SHA256 fbf41bd68299eccdcf456c0869771999f75d3d9bf0f57ce1038db08b54e8cbb9 SHA512 0761cda9d26b6e665989e708be0f3dfa2fa85b997f4c5cfeb151b45e19114e6e1fcbd2c67a547e6698d83f3978e37203db3dcf2e5670356f6f93986ffc55d37e WHIRLPOOL 0396435f90b504605fe0555264de1202efea57f2a48a94035a4113828fe66ff117a4dde3eaa648591b26f902b84e9a8bfab117f29cc4a7ea31b45a0b8c965904
 DIST gdm-3.8.0.tar.xz 1665812 SHA256 4a0894ae50d1f090c6ccc450b74142243fff9ee17e2924c0f363ea51b3ba6bd5 SHA512 6de9a09777a66e1d0879bf43179aa40eaa8389123ff959fdcc34dfa71a3d75738ee0e90a47712934d1c4bfcc7e32f70a634640d53000907dfdf50f4b3118c7b5 WHIRLPOOL 8daa065867202a4de93dd553605698775da67c17944a0a8d4d932e1e867b733fc372aecd5c1e54c8690363fea6f858e47f54af7b70c13681a1931e2c694aa42e
+DIST gdm-3.8.3.1.tar.xz 1677900 SHA256 a8c8a32803e32c5d087c75c6be8160cfe4d15843953f07b599d653bac471320e SHA512 dc196115ab910cb4a5310ef7fda5fbb18a50cfd2f8df143a82305c040c75a3d34ead132fd885647133bb0a384cc7af15e2ead9f872e70476e47f7612e24248a1 WHIRLPOOL 6148c23cf9fa08a5f6f9d17b73179aaf5e756a314212a36bb9d496041bbdb42a739cbba52ded18ddb6c9566b7b32f8cf921b42675f0efa60dfd44768f911315a
 DIST gdm-gentoo-2012.09.25.tar.xz 1448 SHA256 f5978e4309e5486be41fec437a6e538dbfca3451757f3282a557941c4e70700d SHA512 c9d1a4699c34ce8708a4e7eed1b38d66ead507a4a2a6b45f2ef6254d54b46c755c9195db0593d6aa6785a8986e2ef5235592071c0cae8c1c8963951ecdb7c079 WHIRLPOOL c0efd131977b0036431b9edd6932025247323f198dc1bd7195efb55d31fd6b106ebdf391944b0009cf7a3261e99160fa6041a26348fe020badf26d0785f5dcc8
 DIST gentoo-gdm-theme-r3.tar.bz2 411703 SHA256 c7cbe97757ff93f0ffd42f9d9fb702278a361e830940a03901cda9943f44ba68 SHA512 47485899c698a2f6c3dee540806c0bbdedeab77a31b1f2b191f7f98d0d88a580aeb8dddf16fc33226db0519c21d185112421b5c6e233883ea4f67c844028281a WHIRLPOOL bac9f9ef3e7e88401e605c34deca6e7c31e2d4456af3781252a91f7bc33084af27ecc9e4a74022767b25db23d8f70842a39225c8544f1c02229ad7f7af670d42
 EBUILD gdm-2.20.11-r1.ebuild 7213 SHA256 71ac1e2eaaac38e36b3a11fc9bd883399e57b0bcae84458804f15611b5bf05b0 SHA512 5b78fe76b6ce79f5cab0ff027c1bc117766c234acfa58869155e56cd4fe0aae5a2e971014f2d9ea15637dbc6fcc5d5e536b5f36a6e3e664b2b2cb68779d83b04 WHIRLPOOL 7837696f0f0e54045ae4df101b89aa8ac9147ce064a406ed604ef8c7c04b30953ba35a8773c6bc404a60d62f6bca124db486c498690a561d2e8112b5f4452b5d
 EBUILD gdm-3.6.2-r1.ebuild 8125 SHA256 3992ffe031d3244fa8fb8d349120e58ced57f15930246a65ead05bf0596d16de SHA512 ee3ad68374d8ffbf09c0eeb212a02b03c069ed30c10936136d8123364c0962cf10874844b2e4b6ebd1891e75e945eca439fefa8f6baaf0bc5ecba03ad3874333 WHIRLPOOL 18f95e54da52ebfca663ba5087f6d428707314ba7bcec70a4e716a8df177b6cadf59a20448a3e0a4d3c81ad7b8a11aa3f0ea9230d875ae0f82efff309c0b5989
 EBUILD gdm-3.6.2.ebuild 8038 SHA256 87b27f6d367dad8c2c4b28f0d103eb7c22faece16065bf4585e93e43d17646e5 SHA512 23fd18fd08928e2205f89744f3de9ca1b4ce9440bfbecd700bc0d150162122cbe8a019850580daac1130914fcc70783481a163a5aac47cbbd5b37018971db106 WHIRLPOOL bf9ffc84d8f50f248e083ecb518150f97e6d382b0c4220aec12c3cb9e216332aa66378b9c21261dc42e78392c4e35055b917b46e830809b9d1b3d821cf1723eb
 EBUILD gdm-3.8.0.ebuild 7896 SHA256 34d4c40b63d4771462422ad6d893f2098d087539ccecc102d87d8075f96fee7b SHA512 217e6602f64f1a0b39323376f516f8a814679128f51ef324385e3a1ca29b1decd1c17c105634e551e132f2970a80ad66ea939135334c176b0623ad1e69274bce WHIRLPOOL 1ef57963321faffd68972171b8bde16e49b86ef89a06c25f2ce242a3414cf6fff3e147d7d1d091d863fec6963334bb4e879239bbae07b387cad3ac4963cf42d8
-MISC ChangeLog 55963 SHA256 1b94b447a2b189d81e9033ec8adf80ff216f38ed7a18a52bc23a5c97e46e31e6 SHA512 55543c2f869102136377d192b04b6d772d3ef1b7f59681019d5f387245a1f58345e5d5a222a88d349d23dc2aeb121e0b40c71b6866cb11a320f509e7c76a45f5 WHIRLPOOL c9f05b79541aeb590042f711a263f8f2213619524e9efd44c5ed4f7aa52b64cc46e5277f2f71ef82d8402770812ca4be024e3800bee8f920c2647b0abfaab901
+EBUILD gdm-3.8.3.1.ebuild 6668 SHA256 f2e9451a20edcccafa4e344a06589665e274544ef5d3db86c2de569c2dac59ab SHA512 c04f6ef07fb963c21a8b1bbacd190c6c2d4d7d7c67570a04fb7b1c93acc711417dc46a651fd2d6b7bd6f8ca55455123654a690c49d7982c88bf96841786cccfb WHIRLPOOL 9bcaf0f94ad0539a897089d5a119d59542c04d5cb60dc3455882d704253782cd5b980d973defc9d3a395dc89b2d759a792954ec29a493e6cc0d453921075ea5c
+MISC ChangeLog 56321 SHA256 3d3e2aa97ee458995128f6d8ae2efc7856b6758f0e5482f432dc2078fc07bf7d SHA512 2e893d56744ce970c390df96175759ca4b995a763ad57f39e1293ae872b703f75f2d4919681a23d22b81987975b8065e3689e80f5220eabe3fd4858e5626dff9 WHIRLPOOL 9aff481d6d2f3c9526184f7bb5f41f2800e765f363eac96d2ebf7b9ab93491a44834ebdd7b40dff5b990285bcaa9e6724de724c33abe3c16cd73f2242331ab7d
 MISC metadata.xml 1022 SHA256 37e58ae7dcad61901d81d13c5594664f8d4c6b6ff44171884e6ac65b3561625b SHA512 91b08a96b496de46786985dfc069d51886d6507a15c25b2731f8272bc8bc170644744b88216f9eb2943274a752ff4c6bb6577c543cded31d745d92cc7781e286 WHIRLPOOL 863c72a48f63279bcd4762e652c2c25b17b4d07fda26c3a43828240206d10bfb5e68461523572c081fdbcc9e097930c873d7e5604fd2d8d77e4cc6edec08885a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGaDncACgkQ1fmVwcYIWAb83wCePBzbhGS7N+kVY41dwjZ6+SPG
-fasAn1DUZLidsJ09s+1V2A3HikOgCw/O
-=DN6a
+iEYEAREIAAYFAlHipWQACgkQCaWpQKGI+9QKtQCdHMPNWZ/juTOvYj/52WKoDy9y
+C/gAn0TW+WrKk87OeKv+uRaApqyo3wTT
+=DRZQ
 -----END PGP SIGNATURE-----
